# raspi.pico.collection

./: .coveragerc  PiPico-Programming.pptx  README.md  macropad_launcher.spec
.github/workflows/: main.yml
docs/: d_9115b57f700e702f___init___py.html  d_9115b57f700e702f_test_input_manager_py.html  d_9115b57f700e702f_test_layout_manager_py.html  d_d71ef9b398213dcc_app_py.html  d_d71ef9b398213dcc_input_manager_py.html  d_d71ef9b398213dcc_layout_manager_py.html  d_d71ef9b398213dcc_macro_enums_py.html  d_d71ef9b398213dcc_macropad_launcher_py.html  d_d71ef9b398213dcc_macropad_service_py.html  d_d71ef9b398213dcc_main_config_window_py.html  d_d71ef9b398213dcc_password_manager_py.html  d_d71ef9b398213dcc_program_executer_py.html  d_d71ef9b398213dcc_resources_py.html  d_d71ef9b398213dcc_service_py.html  d_d71ef9b398213dcc_settings_py.html  d_d71ef9b398213dcc_sound_mixer_py.html  d_d71ef9b398213dcc_time_journal_py.html  d_d71ef9b398213dcc_tray_icon_app_py.html  d_d71ef9b398213dcc_util_py.html  d_d71ef9b398213dcc_winservice_py.html  index.html  status.json
pico.e-ink.2.13/: code.py
pico.e-ink.2.13/displaytest/: links.txt
pico.e-ink.2.13/env-sensor-display/: code.py
pico.e-ink.2.13/env-sensor-display/lib/adafruit_bme280/: basic.py
pico.environment/: main.py
pico.evalboard/: delete_all_files.py  links.txt
pico.evalboard/Pico-Eval-Board-Code/c/01_GPIO/: CMakeLists.txt  GPIO.c
pico.evalboard/Pico-Eval-Board-Code/c/02_PWM/: 02_PWM.c  CMakeLists.txt
pico.evalboard/Pico-Eval-Board-Code/c/03_ADC/: 03_ADC.c  CMakeLists.txt
pico.evalboard/Pico-Eval-Board-Code/c/04_UART/: 04_UART.c  CMakeLists.txt
pico.evalboard/Pico-Eval-Board-Code/c/05_I2C/: CMakeLists.txt  main.c
pico.evalboard/Pico-Eval-Board-Code/c/06_SPI/: CMakeLists.txt
pico.evalboard/Pico-Eval-Board-Code/c/06_SPI/examples/: CMakeLists.txt  lcd_test.c
pico.evalboard/Pico-Eval-Board-Code/c/06_SPI/lib/config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
pico.evalboard/Pico-Eval-Board-Code/c/06_SPI/lib/lcd/: CMakeLists.txt  LCD_Driver.c  LCD_Driver.h  LCD_Touch.c
pico.evalboard/Pico-Eval-Board-Code/c/07_PIO/PIO-I2S/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt  audio_pio.pio  main.c
pico.evalboard/Pico-Eval-Board-Code/c/07_PIO/PIO-I2S/lib/audio_data/: CMakeLists.txt  audio_data.c  audio_data.h
pico.evalboard/Pico-Eval-Board-Code/c/07_PIO/PIO-I2S/lib/audio_pio/: CMakeLists.txt  audio_pio.c  audio_pio.h
pico.evalboard/Pico-Eval-Board-Code/c/07_PIO/PIO-I2S/lib/main-bf/: main.c
pico.evalboard/Pico-Eval-Board-Code/c/07_PIO/PIO-I2S/uf2/: audio_firmware.uf2
pico.evalboard/Pico-Eval-Board-Code/c/07_PIO/PIO_WS2812/: CMakeLists.txt  PIO_WS2812.c
pico.evalboard/Pico-ResTouch-LCD-X_X_Code/Pico-ResTouch-LCD-X_X_Code/c/: CMakeLists.txt
pico.evalboard/Pico-ResTouch-LCD-X_X_Code/Pico-ResTouch-LCD-X_X_Code/c/examples/: CMakeLists.txt
pico.evalboard/Pico-ResTouch-LCD-X_X_Code/Pico-ResTouch-LCD-X_X_Code/python/: main_2inch8.py  st7789.py
pico.evalboard/hello-world/: main.py
pico.evalboard/read-temp-photoresistor/: main.py
pico.evalboard/rgb-reset/: main.py
pico.evalboard/user-key/: main.py
pico.explorer/: links.txt  pimoroni-pico-v0.2.6-micropython-v1.16.uf2
pico.explorer/balls_demo/: main.py
pico.explorer/bme280/: main.py
pico.explorer/buttons_interrupt/: main.py
pico.explorer/buttons_naive/: main.py
pico.explorer/buzzer_noise/: main.py
pico.explorer/debug_gpio_layout/: main.py
pico.explorer/i2c_address_finder/: main.py
pico.explorer/rainbow/: main.py
pico.explorer/show_temp/: main.py
pico.groveshield/gesture_sensor/: code.py
pico.groveshield/gesture_sensor/lib/: New Text Document.txt  gesture.py  gesture_simple.py
pico.groveshield/i2c_scan/: code.py
pico.groveshield/infrared_sending_recieving/: code.py
pico.groveshield/led_string_light/: code.py
pico.groveshield/moisture_sensor/: code.py
pico.hid.macropad/: code.py
pico.hid.macropad/backup_20.02.2022/lib/: enum.py
pico.hid.macropad/backup_20.02.2022/lib/robust_serial/: robust_serial.py  utils.py
pico.hid.macropad/keyconfig/: send_keys.py
pico.hid.macropad/lib/: adafruit_pypixelbuf.py
pico.hid.service/: .gitignore  app.py  input_manager.py  keyboard_manager.py  layout.json  layout_manager.py  layouts.json  macro_enums.py  macropad_launcher.py  macropad_launcher.spec  macropad_service.py  macropad_service.spec  main_config_window.py  password_manager.py  program_executer.py  requirements.txt  resources.py  resources.qrc  service.py  service.spec  settings.json  settings.py  sound_mixer.py  time_journal.py  tray_icon_app.py  util.py  voice_changer_sd_sync.py  winservice.py
pico.hid.service/scripts/: create-venv.ps1  generate_cert.ps1  generate_pyqt_src.ps1  install-dependencies.ps1
pico.hid.service/tests/: settings.json  test_input_manager.py  test_layout_manager.py  test_layouts.json
pico.hid.service/ui/: _button_function_dialog.py  _button_function_dialog.ui  button_function_dialog.py  main_config_window.py  main_config_window.ui  main_window.py  resources.qrc  resources_rc.py
pico.servodriver/: links.txt
pico.servodriver/Pico_Servo_Driver_Code/python/: servo.py
pico.servodriver/pivot_2motors/: main.py
pico.servodriver/useless_box/circuitpython/: code.py
pico.servodriver/useless_box/micropython/: buzzer_music.py  main.py
pico.uselessBox/: boot_out.txt  code.py
pico.uselessBox/lib/adafruit_motor/: motor.py  servo.py  stepper.py
